# crypto-token-metrics-api

./: .env  Cargo.toml  notes.md  readme.MD
src/: api_docs.rs  controllers.rs  main.rs  models.rs  routes.rs
src/controllers/: depth_history_api_controller.rs  earnings_history_api_controller.rs  mod.rs  rune_pool_history_api_controller.rs  swaps_history_api_controller.rs
src/models/: api_request_param_model.rs  custom_error_model.rs  depth_history_model.rs  earning_history_model.rs  mod.rs  rune_pool_model.rs  swap_history.rs  swap_history_model.rs
src/routes/: depth_route.rs  earning_route.rs  mod.rs  rune_pool_route.rs  swap_route.rs
src/services/: db.rs  depth_history_service.rs  earnings_history_service.rs  fetch_all_cron_service.rs  mod.rs  rune_pool_service.rs  swap_history_service.rs
src/utils/: constants.rs  db_helper_utils.rs  mod.rs  parser_utils.rs
