[package]
name = "week3-catalog"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
futures-util = "0.3.31"
mongodb = "3.1.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = "1.0.210"
tokio = { version = "1", features = ["full"] }
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7", features = ["actix-web"] }
serde_json = "1.0.132"